2018-06-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/constitute.c (ReadImage): Assure that an error exception
	is thrown if coder returns null without properly reporting an
	exception.

	* magick/blob.c (BlobToImage): Assure that an error exception is
	thrown if coder returns null without properly reporting an
	exception.

	* coders/png.c (ReadMNGImage): Disable mystery "linked list is
	corrupted" code.  Assure that exceptions are reported to the
	correct place so they are not lost.  Fixes oss-fuzz 8710
	"graphicsmagick/coder_MNG_fuzzer: Indirect-leak in
	AllocateImage". (Credit to OSS-Fuzz)

	* coders/tiff.c (ReadTIFFImage): Initialize allocated scanline,
	strip, or tile to zero in order to avoid complaint about use of
	uninitialized data if libtiff fails to write all the bytes.  Fixes
	oss-fuzz 8551 "graphicsmagick/coder_TIFF_fuzzer:
	Use-of-uninitialized-value in ImportGrayQuantumType". (Credit to
	OSS-Fuzz)

	* magick/annotate.c (RenderFreetype): Throw an exception if
	DrawInfo font is null.  Should fix oss-fuzz 8557
	"graphicsmagick/coder_PCD_fuzzer: Unknown signal in
	RenderFreetype" and may fix oss-fuzz 8544
	"graphicsmagick/coder_PCD_fuzzer: Null-dereference READ in
	RenderFreetype". (Credit to OSS-Fuzz)

	* coders/jpeg.c (ReadGenericProfile): Add/improve tracing for
	profile size and when JPEG header is being read.

2018-06-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (ReadOneJNGImage): Report a useful exception for
	the case when the JNG file fails to provide the necessary image
	chunks to allocate the color image.  Inspired by oss-fuzz 8666
	"graphicsmagick/coder_JNG_fuzzer: ASSERT: data != (const char *)
	NULL" although the reported issue was not reproduced.

2018-05-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (ReadMNGImage): Fix off-by-one in length validation
	for TERM chunk which allowed one byte heap read overflow.  Fixes
	oss-fuzz 8615 "graphicsmagick/coder_MNG_fuzzer: